welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:8: error: '<-' expected but ')' found.
for (compteur < 1 to n) {
                      ^Program:13: error: illegal start of simple expression
	}
        ^